# 12-DOF-Quadruped-Control

./: CLdev.sh  CLnew.sh  gazebo_control_test.sh  rebuild_sim.sh  start_control.sh  startup.sh
.devcontainer/: Dockerfile  devcontainer.json
src/quadruped_hardware_sim/: CMakeLists.txt  package.xml  quadruped_hardware_sim.xml
src/quadruped_hardware_sim/src/: ROS2_CAN_Motor.cpp  quadruped_hardware_sim.cpp
src/quadruped_mpc/include/quadruped_mpc/acados_generated/quadruped_ode_model/: quadruped_ode_expl_ode_fun.c  quadruped_ode_expl_vde_adj.c  quadruped_ode_expl_vde_forw.c
src/rl12dof_urdf_description/: CMakeLists.txt
src/rl12dof_urdf_description/config/: FK_cmds.yaml  IK_cmds.yaml  controllers.yaml  impedance_test.yaml  joint_tests.yaml
src/rl12dof_urdf_description/launch/: gazebo_sim.launch.py  test_param.launch.py
src/rl12dof_urdf_description/scripts/: FKTestNode.py  ImpedanceTestNode.py  joint_test_param_node.py  safety.py
src/rl12dof_urdf_description/urdf/: rl12dof_links_joints.xacro  rl12dof_urdf.gazebo.xacro  rl12dof_urdf.ros2control  rl12dof_urdf.ros2control.xacro  rl12dof_urdf.xacro
